debathena-cluster-login-config (1.41) UNRELEASED; urgency=low

  * Update getty.debathena to work with logind (which has replaced
    ConsoleKit in Trusty) (Trac: #1482)
  * This version actually includes the dconf locks described in 1.40
  * Depend on debathena-dconf-config
  * Convert to dh7 and clean up maintainer scripts
  * Remove stray c-p-d shell code from maintainer scripts

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 18 Jun 2014 18:05:34 -0400

debathena-cluster-login-config (1.40) unstable; urgency=low

  * Disable Lens search results (Trac: #1423)
  * Customize the Launcher for people who haven't used it before
  * Add dconf locks to disable user switching
  * Disable the guest session in lightdm (and, by extension,
    indicator-session)

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 05 Jun 2014 17:23:39 -0400

debathena-cluster-login-config (1.39) unstable; urgency=low

  [ Jonathan Reed ]
  * Switch from control.in to control (Trac: #561)
  * Bump Standards-Version to 3.9.3
  * Bump compat level to 7

  [ Alexander Chernyakhovsky ]
  * Add git-buildpackage configuration
  * Set source format to 3.0 (native)

 -- Alexander Chernyakhovsky <achernya@mit.edu>  Sun, 29 Sep 2013 05:10:01 -0400

debathena-cluster-login-config (1.38) unstable; urgency=low

  * Use dh_gconf instead of calling gconftool-2 in the postinst (Trac:
    #550)
  * Port the rest of the gconf mandatory keys to gsettings
  * De-support (and Break:) gdm << 2.25.2
  * Stop supporting Lucid and cleanup the rules file
  * Stop scribbling over sudoers and use sudoers.d (Trac: #1219)

 -- Jonathan Reed <jdreed@mit.edu>  Fri, 07 Sep 2012 14:25:53 -0400

debathena-cluster-login-config (1.37) unstable; urgency=low

  * Provide a gsettings-override file for Precise (Trac: #1242)
  * Update screensaver-logout to use gnome-session-quit

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 29 Aug 2012 14:15:30 -0400

debathena-cluster-login-config (1.36.3) unstable; urgency=low
