@@ -6,8 +6,10 @@ debathena-cluster-login-config (1.41) UNRELEASED; urgency=low
   * Depend on debathena-dconf-config
   * Convert to dh7 and clean up maintainer scripts
   * Remove stray c-p-d shell code from maintainer scripts
+  * Move to per-distro gsettings override files, selected at build time,
+    because Unity.
 
- -- Jonathan Reed <jdreed@mit.edu>  Wed, 18 Jun 2014 18:05:34 -0400
+ -- Jonathan Reed <jdreed@mit.edu>  Wed, 18 Jun 2014 18:06:15 -0400
 
 debathena-cluster-login-config (1.40) unstable; urgency=low
 
